--- a/divide.htm
+++ b/divide.htm
@@ -6,6 +6,11 @@
 <button onclick="myFunction();">Click me!</button>
 <button onclick="reset();">Reset</button><br>
 <table cellpadding="2" border="1">
+	<tr>
+		<td><b>Dividable by 5</b><td>
+		<td><b>Dividable by 8</b><td>
+		<td><b>Dividable by 5&8</b><td>
+		<td><b>Not Dividable by 5 or 8</b><td>
 	<tr height="300">
 		<td id=divFive width="100" bgcolor="#ffddaa" valign="top">Devidable by 5</td>
 		<td id=divEigth width="100" bgcolor="#ddffaa" valign="top">Devidable by 8</td>
